# code-challenges

./: .gitignore  README.md
.gitsecret/keys/: pubring.kbx  pubring.kbx~  trustdb.gpg
.gitsecret/paths/: mapping.cfg
api-backend/: requirements.txt  upload_prices.py
datascience/: Coding Challenge.ipynb  Makefile  gcloud-credentials.json.secret  pyproject.toml
devops/: README.md
