[tool.poetry]
name = "datascience"
version = "0.1.0"
description = ""
authors = ["jakobkolb <jakob.j.kolb@gmail.com>"]

[tool.poetry.dependencies]
python = "3.8"
google-cloud-bigquery = "^2.30.1"
jupyterlab = "^3.2.3"
pandas = "^1.3.4"
google-cloud-bigquery-storage = "^2.10.1"
pyarrow = "^6.0.0"
proto-plus = "1.18.0"
matplotlib = "^3.4.3"
numpy = "^1.21.4"
tqdm = "^4.62.3"
ipywidgets = "^7.6.5"
keras = "^2.7.0"
tensorflow = "^2.7.0"
tensorboard = "^2.7.0"

[tool.poetry.dev-dependencies]
black = "^21.10b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
